# llmytranslate

./: .env.example  .env.tailscale  .gitignore  AI_VOICE_OVERLAP_PREVENTION_COMPLETE.md  ANDROID_ARCHITECTURE_ANALYSIS.md  ANDROID_PHASE2A_COMPLETE.md  BAIDU_API_COMPATIBILITY.md  BEST_TFLITE_MODELS_2025.md  CLEANUP_COMPLETE.md  CONTRIBUTING.md  CURRENT_TFLITE_MODELS_ANALYSIS.md  DATA_FLOW_DIAGRAM.md  DIRECTORY_STRUCTURE.md  DOCUMENTATION_COMPLETE_SUMMARY.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  INTELLIGENT_CONVERSATION_SUMMARY.md  M2_MACBOOK_SETUP_GUIDE.md  MACOS_SETUP_NOTES.md  MISSION_ACCOMPLISHED_REAL_MODELS.md  MULTI_PIPELINE_ARCHITECTURE_ROADMAP.md  NEXT_STEPS_ACTION_PLAN.md  PHASE2A_TESTING_STRATEGY.md  PIPELINE_IMPLEMENTATION_STATUS.md  PRODUCTION_SETUP_GUIDE.md  PROJECT_ORGANIZATION.md  QUICK_NETWORK_ACCESS.md  README-zh.md  README.md  REAL_MODEL_CONVERSIONS_SUCCESS.md  REAL_TFLITE_MODELS_STATUS_2025.md  REORGANIZATION_SUMMARY.md  SHELL_SCRIPT_SYNC_SUMMARY.md  SHUTDOWN_SCRIPTS.md  SMART_INTERRUPTION_IMPLEMENTATION.md  SOFTWARE_DESIGN_DOCUMENT.md  STARTUP_SCRIPTS.md  STREAMING_TTS_COMPLETE_REPORT.md  SYSTEM_ARCHITECTURE.md  TERMUX_DEBUG_GUIDE.md  (+91 more)
.github/workflows/: cross-platform-ci.yml
.venv-tts/: pyvenv.cfg
.venv-tts/Scripts/: activate  activate.bat  num2words  numba
android/: CLEANUP_SYNC_SUMMARY.md  README.md  android-diagnostic.ps1  build-debug.bat  build-direct.bat  build-offline.bat  build-online.bat  build.gradle.kts  build_output.txt  build_result.txt  clean-build.bat  compilation_errors.txt  create-icons.ps1  detailed_error.txt  gradle.properties  gradlew  local.properties  quick-build-test.ps1  quick-build-test.sh  quick-build.bat  settings.gradle.kts  wrapper-build.bat
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/jni/: mobile_ai_jni_bridge.cpp  qnn_jni_bridge.cpp
android/app/src/main/cpp/mobile_ai/: onnx_mobile_service.cpp  onnx_mobile_service.h  tflite_gpu_service.cpp  tflite_gpu_service.h  tflite_gpu_service_prod.cpp  tflite_gpu_service_prod_headers.cpp
android/app/src/main/cpp/qnn/: qnn_llm_service.cpp
audio_cache/background_music/: bright_morning.json  deep_meditation.json  default_ambient.json  focused_mind.json  gentle_waves.json
config/: .env.remote  README.md  m2_pipeline_config.yaml  nginx.conf  requirements-minimal.txt  softwareRequirements.txt
data/samples/: tts_test_response.json
dev/android-setup/: build-android.ps1  build-android.sh  build-help.ps1  install-gradle.ps1  setup-android-dev.ps1  setup-android-sdk.ps1  setup-env-android.ps1  setup-java-env.ps1
dev/experiments/: demo_intelligent_conversation.py  simple_background_music.py
docker/: Dockerfile  README.md  docker-compose.remote.yml  docker-compose.yml  nginx.remote.conf
docs/: ANDROID_APP_PLAN.md  CHATBOT_ARCHITECTURE_DESIGN.md  CLASHX_TAILSCALE_CONFIGURATION.md  CROSS_PLATFORM_ANDROID_SCRIPTS.md  CROSS_PLATFORM_CHATBOT_PLAN.md  CURL_COMMANDS.md  DUAL_ACCESS_SETUP.md  GIT_CREDENTIAL_FIX.md  JAVA_COMPATIBILITY.md  LLMyTranslate_Service_Setup.md  NGROK_SETUP.md  PHASE_3_COMPLETION_SUMMARY.md  PHONE_CALL_MODE_PLAN.md  PRODUCTION_MODE_UPGRADE.md  PROJECT_ORGANIZATION.md  PROJECT_STRUCTURE.md  QNN_IMPLEMENTATION_GUIDE.md  ROUTER_SETUP_GUIDE.md  Remote_Access_Setup.md  SOFTWARE_DESIGN_DOCUMENT.md  STARTUP_SCRIPTS.md  WINDOWS_COMPATIBILITY.md  WINDOWS_HANDOFF_SUMMARY.md
docs/android/: ANDROID_LOGCAT_DEBUGGING_GUIDE.md  ANDROID_PHASE1_COMPLETE.md  ANDROID_PHASE2A_COMPLETE.md  ANDROID_PHASE2A_STATUS.md  ANDROID_PHASE2_NATIVE_ARCHITECTURE_ANALYSIS.md  ANDROID_STREAMING_TTS_INTEGRATION_COMPLETE.md  COMMAND_LINE_ANDROID_BUILD.md  COMMAND_LINE_BUILD_READY.md  CROSS_PLATFORM_ANDROID_SETUP.md
docs/api/: CLIENT_EXAMPLES.md
docs/architecture/: DATA_FLOW_DIAGRAM.md  README.md  SOFTWARE_DESIGN_DOCUMENT.md  SOFTWARE_STACK_FLOWCHART-zh.md  SOFTWARE_STACK_FLOWCHART.md  SYSTEM_ARCHITECTURE.md  sequenceDiagram.mmd
docs/qnn/: QNN_SETUP_GUIDE.md  (+2 more)
mobile/: App.tsx  DEVELOPMENT_GUIDE.md  NODEJS_SETUP.md  README.md  install-nodejs.ps1  package.json  setup-react-native.ps1  setup-react-native.sh
models/: .gitkeep
performance/: README.md  optimized_service_results.json  tailscale_performance_results_20250728_174153.json  test-performance.ps1  test_optimized_service.py  test_performance.py  test_tailscale_performance.py
scripts/: README.md  convert_tinyllama_final.py  deploy-online.sh  deploy.sh  download_real_models.py  git-helper.ps1  git-helper.sh  install-phone-call-deps.ps1  model_reality_check.py  monitor-tailscale.ps1  organize-directory.ps1  production-setup.ps1  production-setup.sh  service-manager.ps1  service-manager.sh  service-status.ps1  setup-ngrok-enhanced.sh  setup-remote-access-unified.ps1  setup-remote-access-unified.sh  setup-tailscale.ps1  setup-tailscale.sh  setup-web-interface.ps1  setup.ps1  setup.sh  setup_ngrok.ps1  setup_ngrok.sh  setup_remote_access.ps1  setup_remote_access.sh  start-chatbot.ps1  start-chatbot.sh  start-service.ps1  start-service.sh  start-tailscale.ps1  start-tailscale.sh  stop-ngrok.sh  stop-service.ps1  stop-service.sh  test-endpoints.ps1  test-tts-dual-env.ps1  test_endpoints.sh  (+1 more)
shared/: tsconfig.json
src/: main.py
tests/: check_tts_languages.py  discover_service.py  final_test.py  pytest.ini  run_tests.py  simple_test.py  test_android_streaming_flow.py  test_api.py  test_audio_chunks.py  test_auth_endpoints.py  test_compatibility.py  test_complete_guest_flow.py  test_error_handling.html  test_guest_chat.py  test_guest_history.py  test_guest_history_workflow.py  test_m2_advanced_models.py  test_m2_config.py  test_ollama.json  test_ollama_connectivity.py  test_ollama_direct.py  test_phone_call_improvements.py  test_registered_user.py  test_registration_errors.py  test_service.py  test_streaming_server.py  test_tflite_wrappers.py  test_tts_british.py  test_web_login.py
web/: audio-test.html  auth.html  chat.html  index.html  index_original.html  live-debug.html  optimized.html  phone-call.html  streaming-tts-test.html  translate-ui.html  translate.html  voice-chat.html
(+223 files in other folders)
